--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@faker-js/faker": "^6.3.1",
+    "@material/menu": "^14.0.0",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.2",
+    "@mui/material": "^5.6.4",
+    "@mui/styled-engine-sc": "^5.6.1",
     "cra-template": "1.1.3",
     "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.3.0",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.0"
   },
